[gd_scene load_steps=5 format=3 uid="uid://dwfbjmlx3hvqn"]

[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="1_4m63n"]
[ext_resource type="Texture2D" uid="uid://caoqdgfvwklsm" path="res://Art/Sprites/mago.png" id="2_414xo"]
[ext_resource type="Script" path="res://Scripts/sprite_vaiven.gd" id="3_5tdyp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hych5"]
size = Vector2(65, 105)

[node name="Enemy" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource("1_4m63n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3.5, 13.5)
shape = SubResource("RectangleShape2D_hych5")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_414xo")
script = ExtResource("3_5tdyp")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="SurroundTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="SurroundTimer" to="." method="_on_surround_timer_timeout"]
